package Creacionales.AbstractFactory;

public class BotonClaro implements IBoton {
    @Override
    public String hacerClick() {
        return "Click en boton claro";
    }
}
