package Creacionales.AbstractFactory;

public class BotonOscuro implements IBoton {
    @Override
    public String hacerClick() {
        return "Click en boton oscuro.";
    }
}
