package Creacionales.AbstractFactory;

public interface IBoton {
    //Producto Abstracto A
    String hacerClick();
}
