package Creacionales.AbstractFactory;

public interface IVentana {
    //Producto Abstracto B
    String mostrarContenido();
}
