package Creacionales.AbstractFactory;

public class VentanaClara implements IVentana {
    @Override
    public String mostrarContenido() {
        return "Mostrando contenido en ventana clara.";
    }
}
