package Creacionales.AbstractFactory;

public class VentanaOscura implements IVentana {
    @Override
    public String mostrarContenido() {
        return "Mostrando contenido en ventana oscura";
    }
}
